syntax = "proto3";
package blocks.pb;

message RawData{
    int32 checkSize = 1;
    int32 flag = 2;
    repeated bytes segments = 3;
    repeated bytes tag = 4;
}

